--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
             "database"
         ],
         "psr-4": {
-            "SICOVIMA\\": "app/"
+            "SIMACOVEPAN\\": "app/"
         }
     },
     "autoload-dev": {
